syntax = "proto3";

//package camel.api;
option go_package="./camel";

message ISeeMap{
	Region region = 1;
	repeated Area areaList = 2;
	repeated Path pathList = 3;
	repeated Station stationList = 4;
	repeated Configuration configurationList = 5;
	repeated TaskAction taskActionList = 6;
	repeated CarManagemet  carMngList = 7;
	repeated CoordOffset coordOffset = 8;

	message Region{
		string id = 1;
		bytes description = 2;
		bytes name = 3;
		int32 floor_number = 4;
		string valid = 5;
		bytes lmuser = 6;
		bytes mapVersion = 7;
		string lmdate = 8;
	}

	message Area{
		string id = 1;							//Guid
		string name = 2;							//区域名称
		int32 fork_lift_height = 3;				//区域抬升高度
		string region_id = 4;
	}

	message Path{
		string id =1;							//路径Guid
		string from_station_rfid = 2;			//路径起点rfid
		string to_station_rfid = 3;				//路径终点rfid
		float goals_angle = 4;					//终点角度
		float goals_height = 5;				//终点高度
		float angle_compensate = 6;	
		float laser_head_height = 7;
		float uncertainty = 8;					//匹配度
		int32 music = 9;						//音乐
		int32 dedect_zone1 = 10;				//前障
		int32 dedect_zone2 = 11;				//后障
		float velocity_max = 12;				//最大速度
		float radius = 13;						//半径
		float destination_range = 14;	
		float distance_zone_interchange = 15;	//障碍物切换距离
		int32 is_running = 16;					//是否可用
		int32 height_step = 17;			
		int32 cargo = 18;				
		int32 driving_direction = 19;			//行驶方向
		float distance = 20;					//距离
		string flag = 21;				
		string lmdate = 22;						//更新时间
		string region_id = 23;
		string transit_action = 24;            //path不是路线的起始或者终点path时执行的动作集合,json字符串
		string enter_action = 25;              //path是路线的终点路径时执行的动作集合,json字符串
		string exit_action = 26;               //path是路线的起始路径时执行的动作集合,json字符串
		bool   allow_auto_avoid = 27;          //true：允许自动避障 false: 不允许自动避障，只能路径跟随
		string car_type = 28;                  //路径允许通过的车型，多个车型间用逗号隔开
	}

	message Station{
		string id = 1;							//站点Guid
		string station_rfid = 2;					//站点rfid
		string station_name = 3;					//站点名
		string station_type = 4;					//站点类型
		float space_x = 5;						//横坐标
		float space_y = 6;						//纵坐标
		float z_axis = 7;						//高度
		string related_id = 8;					//所属区域
		string flag = 9;					
		string lmdate = 10;						//更新时间
		string region_id = 11;
		uint32 QR_id  = 12;
		float  QR_angle = 13;
	}

	message Configuration{
		string area_name = 1;					//区域
		string task_type = 2;					
		int32 section = 3;						
		int32 laser_head_height = 4;
		int32 dedect_zone1 = 5;					//前障
		int32 dedect_zone2 = 6;					//后障
		int32 distance_zone_interchange = 7;	//障碍物切换距离
		int32 destination_range = 8;			
		int32 height_step = 9;
		int32 cargo = 10;
	}
	
	message TaskAction{
		bytes action_name = 1;	    //wcs 中定义的起点和终点的FromAction ToAction
		string enter_action	= 2;	//当进入时需要执行的动作集合，json字符串 
		string exit_action = 3; 	//当离开时需要执行的动作集合，json字符串 
	}
	
	message CarManagemet{
		string id = 1;	    		  //小车guid
		bytes name	= 2;			  //小车名称 
		int32 number = 3; 			  //小车编号 
		string mac = 4;   			  //小车mac地址
		string ip = 5;   			  //小车ip
		bytes car_type = 6; 		  //车型
		string battery = 7;  		  //电池容量 ，数字
		double rated_load = 8; 		  //载重，吨
		double length = 9;			  //长
		double width = 10;			  //宽
		double margin = 11;			  //安全距离
		double reference_point = 12;  //运动中心到车尾距离
		int32 run_time = 13;		  //是否运行
		string valid = 14;			  //是否有效
		string lmuser = 15;           //创建更新人
		string lmdate = 16;			  //创建更新时间
	}

	message CoordOffset {
		string station_name = 1;	// 站点名称S1
		float x = 2;			// x方向的补偿
		float y = 3;			// y方向的补偿
	}
}